Clase10/Clase10/code/gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> instruccion_inline
Rule 5     instruccion -> instruccion_bloque
Rule 6     instruccion -> interface_definition
Rule 7     interface_definition -> INTERFACE ID LLAVE_A interface_props SEMICOLON LLAVE_C
Rule 8     interface_props -> interface_props SEMICOLON ID COLON tipo_dato
Rule 9     interface_props -> ID COLON tipo_dato
Rule 10    instruccion_inline -> print
Rule 11    instruccion_inline -> declare
Rule 12    instruccion_inline -> asignacion
Rule 13    instruccion_inline -> llamada SEMICOLON
Rule 14    instruccion_inline -> retorno
Rule 15    retorno -> RETURN expresion_logica SEMICOLON
Rule 16    retorno -> RETURN SEMICOLON
Rule 17    print -> CONSOLE DOT LOG LPAREN expresion_logica RPAREN SEMICOLON
Rule 18    declare -> tipo_declaracion ID COLON tipo_dato ASIG expresion_logica SEMICOLON
Rule 19    asignacion -> ID ASIG expresion_logica SEMICOLON
Rule 20    tipo_declaracion -> CONST
Rule 21    tipo_declaracion -> VAR
Rule 22    instruccion_bloque -> instruccion_if
Rule 23    instruccion_bloque -> instruccion_while
Rule 24    instruccion_bloque -> declaracion_funcion
Rule 25    instruccion_if -> IF LPAREN expresion_logica RPAREN ifAux
Rule 26    instruccion_if -> IF LPAREN expresion_logica RPAREN ifAux ELSE instruccion_if
Rule 27    instruccion_if -> IF LPAREN expresion_logica RPAREN ifAux ELSE ifAux
Rule 28    ifAux -> LLAVE_A instrucciones LLAVE_C
Rule 29    instruccion_while -> WHILE LPAREN expresion_logica RPAREN LLAVE_A instrucciones LLAVE_C
Rule 30    declaracion_funcion -> FUNCTION ID LPAREN params RPAREN fretorno LLAVE_A instrucciones LLAVE_C
Rule 31    params -> lparams
Rule 32    params -> empty
Rule 33    lparams -> lparams COMA param
Rule 34    lparams -> param
Rule 35    param -> expresion_logica COLON tipo_dato
Rule 36    fretorno -> COLON tipo_dato
Rule 37    fretorno -> empty
Rule 38    expresion_logica -> expresion_relacional AND expresion_relacional
Rule 39    expresion_logica -> expresion_relacional OR expresion_relacional
Rule 40    expresion_logica -> NOT expresion_relacional
Rule 41    expresion_logica -> expresion_relacional
Rule 42    expresion_relacional -> expresion_numerica MAYOR expresion_numerica
Rule 43    expresion_relacional -> expresion_numerica MENOR expresion_numerica
Rule 44    expresion_relacional -> expresion_numerica MAYORI expresion_numerica
Rule 45    expresion_relacional -> expresion_numerica MENORI expresion_numerica
Rule 46    expresion_relacional -> expresion_numerica IGUAL expresion_numerica
Rule 47    expresion_relacional -> expresion_numerica DIFF expresion_numerica
Rule 48    expresion_relacional -> expresion_numerica
Rule 49    expresion_numerica -> MINUS expresion_numerica
Rule 50    expresion_numerica -> expresion_numerica PLUS expresion_numerica
Rule 51    expresion_numerica -> expresion_numerica MINUS expresion_numerica
Rule 52    expresion_numerica -> expresion_numerica TIMES expresion_numerica
Rule 53    expresion_numerica -> expresion_numerica DIVIDE expresion_numerica
Rule 54    expresion_numerica -> expresion_numerica MODULE expresion_numerica
Rule 55    expresion_numerica -> terminal
Rule 56    terminal -> TNUMBER
Rule 57    terminal -> TSTRING
Rule 58    terminal -> TRUE
Rule 59    terminal -> FALSE
Rule 60    terminal -> ID
Rule 61    terminal -> llamada
Rule 62    terminal -> LLAVE_A lvalues LLAVE_C
Rule 63    terminal -> ID DOT ID
Rule 64    lvalues -> lvalues COMA ID COLON expresion_logica
Rule 65    lvalues -> ID COLON expresion_logica
Rule 66    llamada -> ID LPAREN args RPAREN
Rule 67    args -> lexpresiones
Rule 68    args -> empty
Rule 69    lexpresiones -> lexpresiones COMA expresion_logica
Rule 70    lexpresiones -> expresion_logica
Rule 71    tipo_dato -> STRING
Rule 72    tipo_dato -> NUMBER
Rule 73    tipo_dato -> BOOLEAN
Rule 74    tipo_dato -> ID
Rule 75    tipo_dato -> empty
Rule 76    empty -> <empty>

Terminals, with rules where they appear

AND                  : 38
ASIG                 : 18 19
BOOLEAN              : 73
COLON                : 8 9 18 35 36 64 65
COMA                 : 33 64 69
CONSOLE              : 17
CONST                : 20
DIFF                 : 47
DIVIDE               : 53
DOT                  : 17 63
ELSE                 : 26 27
FALSE                : 59
FUNCTION             : 30
ID                   : 7 8 9 18 19 30 60 63 63 64 65 66 74
IF                   : 25 26 27
IGUAL                : 46
INTERFACE            : 7
LLAVE_A              : 7 28 29 30 62
LLAVE_C              : 7 28 29 30 62
LOG                  : 17
LPAREN               : 17 25 26 27 29 30 66
MAYOR                : 42
MAYORI               : 44
MENOR                : 43
MENORI               : 45
MINUS                : 49 51
MODULE               : 54
NOT                  : 40
NUMBER               : 72
OR                   : 39
PLUS                 : 50
RETURN               : 15 16
RPAREN               : 17 25 26 27 29 30 66
SEMICOLON            : 7 8 13 15 16 17 18 19
STRING               : 71
TIMES                : 52
TNUMBER              : 56
TRUE                 : 58
TSTRING              : 57
VAR                  : 21
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

args                 : 66
asignacion           : 12
declaracion_funcion  : 24
declare              : 11
empty                : 32 37 68 75
expresion_logica     : 15 17 18 19 25 26 27 29 35 64 65 69 70
expresion_numerica   : 42 42 43 43 44 44 45 45 46 46 47 47 48 49 50 50 51 51 52 52 53 53 54 54
expresion_relacional : 38 38 39 39 40 41
fretorno             : 30
ifAux                : 25 26 27 27
init                 : 0
instruccion          : 2 3
instruccion_bloque   : 5
instruccion_if       : 22 26
instruccion_inline   : 4
instruccion_while    : 23
instrucciones        : 1 2 28 29 30
interface_definition : 6
interface_props      : 7 8
lexpresiones         : 67 69
llamada              : 13 61
lparams              : 31 33
lvalues              : 62 64
param                : 33 34
params               : 30
print                : 10
retorno              : 14
terminal             : 55
tipo_dato            : 8 9 18 35 36
tipo_declaracion     : 18

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . instruccion_inline
    (5) instruccion -> . instruccion_bloque
    (6) instruccion -> . interface_definition
    (10) instruccion_inline -> . print
    (11) instruccion_inline -> . declare
    (12) instruccion_inline -> . asignacion
    (13) instruccion_inline -> . llamada SEMICOLON
    (14) instruccion_inline -> . retorno
    (22) instruccion_bloque -> . instruccion_if
    (23) instruccion_bloque -> . instruccion_while
    (24) instruccion_bloque -> . declaracion_funcion
    (7) interface_definition -> . INTERFACE ID LLAVE_A interface_props SEMICOLON LLAVE_C
    (17) print -> . CONSOLE DOT LOG LPAREN expresion_logica RPAREN SEMICOLON
    (18) declare -> . tipo_declaracion ID COLON tipo_dato ASIG expresion_logica SEMICOLON
    (19) asignacion -> . ID ASIG expresion_logica SEMICOLON
    (66) llamada -> . ID LPAREN args RPAREN
    (15) retorno -> . RETURN expresion_logica SEMICOLON
    (16) retorno -> . RETURN SEMICOLON
    (25) instruccion_if -> . IF LPAREN expresion_logica RPAREN ifAux
    (26) instruccion_if -> . IF LPAREN expresion_logica RPAREN ifAux ELSE instruccion_if
    (27) instruccion_if -> . IF LPAREN expresion_logica RPAREN ifAux ELSE ifAux
    (29) instruccion_while -> . WHILE LPAREN expresion_logica RPAREN LLAVE_A instrucciones LLAVE_C
    (30) declaracion_funcion -> . FUNCTION ID LPAREN params RPAREN fretorno LLAVE_A instrucciones LLAVE_C
    (20) tipo_declaracion -> . CONST
    (21) tipo_declaracion -> . VAR

    INTERFACE       shift and go to state 15
    CONSOLE         shift and go to state 17
    ID              shift and go to state 16
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FUNCTION        shift and go to state 22
    CONST           shift and go to state 23
    VAR             shift and go to state 24

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    instruccion_inline             shift and go to state 4
    instruccion_bloque             shift and go to state 5
    interface_definition           shift and go to state 6
    print                          shift and go to state 7
    declare                        shift and go to state 8
    asignacion                     shift and go to state 9
    llamada                        shift and go to state 10
    retorno                        shift and go to state 11
    instruccion_if                 shift and go to state 12
    instruccion_while              shift and go to state 13
    declaracion_funcion            shift and go to state 14
    tipo_declaracion               shift and go to state 18

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . instruccion_inline
    (5) instruccion -> . instruccion_bloque
    (6) instruccion -> . interface_definition
    (10) instruccion_inline -> . print
    (11) instruccion_inline -> . declare
    (12) instruccion_inline -> . asignacion
    (13) instruccion_inline -> . llamada SEMICOLON
    (14) instruccion_inline -> . retorno
    (22) instruccion_bloque -> . instruccion_if
    (23) instruccion_bloque -> . instruccion_while
    (24) instruccion_bloque -> . declaracion_funcion
    (7) interface_definition -> . INTERFACE ID LLAVE_A interface_props SEMICOLON LLAVE_C
    (17) print -> . CONSOLE DOT LOG LPAREN expresion_logica RPAREN SEMICOLON
    (18) declare -> . tipo_declaracion ID COLON tipo_dato ASIG expresion_logica SEMICOLON
    (19) asignacion -> . ID ASIG expresion_logica SEMICOLON
    (66) llamada -> . ID LPAREN args RPAREN
    (15) retorno -> . RETURN expresion_logica SEMICOLON
    (16) retorno -> . RETURN SEMICOLON
    (25) instruccion_if -> . IF LPAREN expresion_logica RPAREN ifAux
    (26) instruccion_if -> . IF LPAREN expresion_logica RPAREN ifAux ELSE instruccion_if
    (27) instruccion_if -> . IF LPAREN expresion_logica RPAREN ifAux ELSE ifAux
    (29) instruccion_while -> . WHILE LPAREN expresion_logica RPAREN LLAVE_A instrucciones LLAVE_C
    (30) declaracion_funcion -> . FUNCTION ID LPAREN params RPAREN fretorno LLAVE_A instrucciones LLAVE_C
    (20) tipo_declaracion -> . CONST
    (21) tipo_declaracion -> . VAR

    $end            reduce using rule 1 (init -> instrucciones .)
    INTERFACE       shift and go to state 15
    CONSOLE         shift and go to state 17
    ID              shift and go to state 16
    RETURN          shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FUNCTION        shift and go to state 22
    CONST           shift and go to state 23
    VAR             shift and go to state 24

    instruccion                    shift and go to state 25
    instruccion_inline             shift and go to state 4
    instruccion_bloque             shift and go to state 5
    interface_definition           shift and go to state 6
    print                          shift and go to state 7
    declare                        shift and go to state 8
    asignacion                     shift and go to state 9
    llamada                        shift and go to state 10
    retorno                        shift and go to state 11
    instruccion_if                 shift and go to state 12
    instruccion_while              shift and go to state 13
    declaracion_funcion            shift and go to state 14
    tipo_declaracion               shift and go to state 18

state 3

    (3) instrucciones -> instruccion .

    INTERFACE       reduce using rule 3 (instrucciones -> instruccion .)
    CONSOLE         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    CONST           reduce using rule 3 (instrucciones -> instruccion .)
    VAR             reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVE_C         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> instruccion_inline .

    INTERFACE       reduce using rule 4 (instruccion -> instruccion_inline .)
    CONSOLE         reduce using rule 4 (instruccion -> instruccion_inline .)
    ID              reduce using rule 4 (instruccion -> instruccion_inline .)
    RETURN          reduce using rule 4 (instruccion -> instruccion_inline .)
    IF              reduce using rule 4 (instruccion -> instruccion_inline .)
    WHILE           reduce using rule 4 (instruccion -> instruccion_inline .)
    FUNCTION        reduce using rule 4 (instruccion -> instruccion_inline .)
    CONST           reduce using rule 4 (instruccion -> instruccion_inline .)
    VAR             reduce using rule 4 (instruccion -> instruccion_inline .)
    $end            reduce using rule 4 (instruccion -> instruccion_inline .)
    LLAVE_C         reduce using rule 4 (instruccion -> instruccion_inline .)


state 5

    (5) instruccion -> instruccion_bloque .

    INTERFACE       reduce using rule 5 (instruccion -> instruccion_bloque .)
    CONSOLE         reduce using rule 5 (instruccion -> instruccion_bloque .)
    ID              reduce using rule 5 (instruccion -> instruccion_bloque .)
    RETURN          reduce using rule 5 (instruccion -> instruccion_bloque .)
    IF              reduce using rule 5 (instruccion -> instruccion_bloque .)
    WHILE           reduce using rule 5 (instruccion -> instruccion_bloque .)
    FUNCTION        reduce using rule 5 (instruccion -> instruccion_bloque .)
    CONST           reduce using rule 5 (instruccion -> instruccion_bloque .)
    VAR             reduce using rule 5 (instruccion -> instruccion_bloque .)
    $end            reduce using rule 5 (instruccion -> instruccion_bloque .)
    LLAVE_C         reduce using rule 5 (instruccion -> instruccion_bloque .)


state 6

    (6) instruccion -> interface_definition .

    INTERFACE       reduce using rule 6 (instruccion -> interface_definition .)
    CONSOLE         reduce using rule 6 (instruccion -> interface_definition .)
    ID              reduce using rule 6 (instruccion -> interface_definition .)
    RETURN          reduce using rule 6 (instruccion -> interface_definition .)
    IF              reduce using rule 6 (instruccion -> interface_definition .)
    WHILE           reduce using rule 6 (instruccion -> interface_definition .)
    FUNCTION        reduce using rule 6 (instruccion -> interface_definition .)
    CONST           reduce using rule 6 (instruccion -> interface_definition .)
    VAR             reduce using rule 6 (instruccion -> interface_definition .)
    $end            reduce using rule 6 (instruccion -> interface_definition .)
    LLAVE_C         reduce using rule 6 (instruccion -> interface_definition .)


state 7

    (10) instruccion_inline -> print .

    INTERFACE       reduce using rule 10 (instruccion_inline -> print .)
    CONSOLE         reduce using rule 10 (instruccion_inline -> print .)
    ID              reduce using rule 10 (instruccion_inline -> print .)
    RETURN          reduce using rule 10 (instruccion_inline -> print .)
    IF              reduce using rule 10 (instruccion_inline -> print .)
    WHILE           reduce using rule 10 (instruccion_inline -> print .)
    FUNCTION        reduce using rule 10 (instruccion_inline -> print .)
    CONST           reduce using rule 10 (instruccion_inline -> print .)
    VAR             reduce using rule 10 (instruccion_inline -> print .)
    $end            reduce using rule 10 (instruccion_inline -> print .)
    LLAVE_C         reduce using rule 10 (instruccion_inline -> print .)


state 8

    (11) instruccion_inline -> declare .

    INTERFACE       reduce using rule 11 (instruccion_inline -> declare .)
    CONSOLE         reduce using rule 11 (instruccion_inline -> declare .)
    ID              reduce using rule 11 (instruccion_inline -> declare .)
    RETURN          reduce using rule 11 (instruccion_inline -> declare .)
    IF              reduce using rule 11 (instruccion_inline -> declare .)
    WHILE           reduce using rule 11 (instruccion_inline -> declare .)
    FUNCTION        reduce using rule 11 (instruccion_inline -> declare .)
    CONST           reduce using rule 11 (instruccion_inline -> declare .)
    VAR             reduce using rule 11 (instruccion_inline -> declare .)
    $end            reduce using rule 11 (instruccion_inline -> declare .)
    LLAVE_C         reduce using rule 11 (instruccion_inline -> declare .)


state 9

    (12) instruccion_inline -> asignacion .

    INTERFACE       reduce using rule 12 (instruccion_inline -> asignacion .)
    CONSOLE         reduce using rule 12 (instruccion_inline -> asignacion .)
    ID              reduce using rule 12 (instruccion_inline -> asignacion .)
    RETURN          reduce using rule 12 (instruccion_inline -> asignacion .)
    IF              reduce using rule 12 (instruccion_inline -> asignacion .)
    WHILE           reduce using rule 12 (instruccion_inline -> asignacion .)
    FUNCTION        reduce using rule 12 (instruccion_inline -> asignacion .)
    CONST           reduce using rule 12 (instruccion_inline -> asignacion .)
    VAR             reduce using rule 12 (instruccion_inline -> asignacion .)
    $end            reduce using rule 12 (instruccion_inline -> asignacion .)
    LLAVE_C         reduce using rule 12 (instruccion_inline -> asignacion .)


state 10

    (13) instruccion_inline -> llamada . SEMICOLON

    SEMICOLON       shift and go to state 26


state 11

    (14) instruccion_inline -> retorno .

    INTERFACE       reduce using rule 14 (instruccion_inline -> retorno .)
    CONSOLE         reduce using rule 14 (instruccion_inline -> retorno .)
    ID              reduce using rule 14 (instruccion_inline -> retorno .)
    RETURN          reduce using rule 14 (instruccion_inline -> retorno .)
    IF              reduce using rule 14 (instruccion_inline -> retorno .)
    WHILE           reduce using rule 14 (instruccion_inline -> retorno .)
    FUNCTION        reduce using rule 14 (instruccion_inline -> retorno .)
    CONST           reduce using rule 14 (instruccion_inline -> retorno .)
    VAR             reduce using rule 14 (instruccion_inline -> retorno .)
    $end            reduce using rule 14 (instruccion_inline -> retorno .)
    LLAVE_C         reduce using rule 14 (instruccion_inline -> retorno .)


state 12

    (22) instruccion_bloque -> instruccion_if .

    INTERFACE       reduce using rule 22 (instruccion_bloque -> instruccion_if .)
    CONSOLE         reduce using rule 22 (instruccion_bloque -> instruccion_if .)
    ID              reduce using rule 22 (instruccion_bloque -> instruccion_if .)
    RETURN          reduce using rule 22 (instruccion_bloque -> instruccion_if .)
    IF              reduce using rule 22 (instruccion_bloque -> instruccion_if .)
    WHILE           reduce using rule 22 (instruccion_bloque -> instruccion_if .)
    FUNCTION        reduce using rule 22 (instruccion_bloque -> instruccion_if .)
    CONST           reduce using rule 22 (instruccion_bloque -> instruccion_if .)
    VAR             reduce using rule 22 (instruccion_bloque -> instruccion_if .)
    $end            reduce using rule 22 (instruccion_bloque -> instruccion_if .)
    LLAVE_C         reduce using rule 22 (instruccion_bloque -> instruccion_if .)


state 13

    (23) instruccion_bloque -> instruccion_while .

    INTERFACE       reduce using rule 23 (instruccion_bloque -> instruccion_while .)
    CONSOLE         reduce using rule 23 (instruccion_bloque -> instruccion_while .)
    ID              reduce using rule 23 (instruccion_bloque -> instruccion_while .)
    RETURN          reduce using rule 23 (instruccion_bloque -> instruccion_while .)
    IF              reduce using rule 23 (instruccion_bloque -> instruccion_while .)
    WHILE           reduce using rule 23 (instruccion_bloque -> instruccion_while .)
    FUNCTION        reduce using rule 23 (instruccion_bloque -> instruccion_while .)
    CONST           reduce using rule 23 (instruccion_bloque -> instruccion_while .)
    VAR             reduce using rule 23 (instruccion_bloque -> instruccion_while .)
    $end            reduce using rule 23 (instruccion_bloque -> instruccion_while .)
    LLAVE_C         reduce using rule 23 (instruccion_bloque -> instruccion_while .)


state 14

    (24) instruccion_bloque -> declaracion_funcion .
